# agl-service-low-collector

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
conf.d/cmake/: config.cmake
conf.d/wgt/: config.xml.in
htdocs/: index.html  low-collector.css  low-collector.js
src/: CMakeLists.txt  api.c  low-collector.c  low-collector.h
src/collectd_glue/: config.h  libcollectd.c  libcollectd.h
